--- a/index.html
+++ b/index.html
@@ -78,6 +78,31 @@
                         </div>
                         </div>
                 </div>
+                <div class="terget">
+                        <h3 class="section-title">My Current Target</h3>
+                        <p class="hero-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem <br> Ipsum has been the industry's standard
+                        dummy text.</p>
+                </div>
+                <div class="terget-section">
+                        <div class="target-1 target-box">
+                                <img src="./assets/html.png" alt="HTML">
+                                <h3 class="target-title">HTML</h3>
+                                <p class="target-description">Lorem Ipsumis simply dummy <br> text of the printing.</p>
+                                <h5 class="learn-more">learn-more</h5>
+                        </div>
+                        <div class="target-2 target-box">
+                                <img src="./assets/css.png" alt="CSS">
+                                <h3 class="target-title">CSS</h3>
+                                <p class="target-description">Lorem Ipsum is simply dummy <br> text of the printing.</p>
+                                <h5 class="learn-more">learn-more</h5>
+                        </div>
+                        <div class="target-3 target-box">
+                                <img src="./assets/js.png" alt="">
+                                <h3 class="target-title">JavaScript</h3>
+                                <p class="target-description">Lorem Ipsum is simply dummy <br> text of the printing.</p>
+                                <h5 class="learn-more">learn-more</h5>
+                        </div>
+                </div>
         </main>
         <footer>
 
