--- a/index.html
+++ b/index.html
@@ -103,6 +103,42 @@
                                 <h5 class="learn-more">learn-more</h5>
                         </div>
                 </div>
+                <div class="terget">
+                        <h3 class="section-title">My Next Target</h3>
+                        <p class="hero-description">Lorem Ipsumis simply dummy text of the printing and typesetting industry. Lorem <br> Ipsum has been the industry's standard
+                        dummy text.</p>
+                </div>
+                <div class="next-target">
+                        <div class="next-target-name">
+                                <div class="target-content"><img src="./assets/react.png" alt=""></div>
+                                <div class="target-content">
+                                        <h3 class="target-content-title" >ReactJS</h3>
+                                        <p class="target-content-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem <br> Ipsum has been the industry's standard
+                                        dummy text.</p>
+                                        <h5 class="learn-more">Learn More</h5>
+                                </div>
+                        </div>
+                        <div class="next-target-name">
+                                <div class="target-content"><img src="./assets/nodejs.png" alt=""></div>
+                                <div class="target-content">
+                                        <h3 class="target-content-title">NodeJs</h3>
+                                        <p class="target-content-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem <br> Ipsum has been the industry's
+                                        standard
+                                        dummy text.</p>
+                                        <h5 class="learn-more">Learn More</h5>
+                                </div>
+                        </div>
+                        <div class="next-target-name">
+                                <div class="target-content"><img src="./assets/mongodb.png" alt=""></div>
+                                <div class="target-content">
+                                        <h3 class="target-content-title">MongoDB</h3>
+                                        <p class="target-content-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem <br> Ipsum has been the industry's
+                                        standard
+                                        dummy text.</p>
+                                        <h5 class="learn-more">Learn More</h5>
+                                </div>
+                        </div>
+                </div>
         </main>
         <footer>
 
