added the final commit

--- a/index.html
+++ b/index.html
@@ -139,9 +139,26 @@
                                 </div>
                         </div>
                 </div>
+                <div class="sugestion">
+                        <div class="sugestion-content">
+                                <h3 class="sugestion-title">I need Support</h3>
+                                <p class="sugestion-description">Lorem Ipsum is simply dummy text of the printing and <br> typesetting industry.</p>
+                                <input class="input-box" type="text" placeholder="Suggest me any feedback for me" name="" id="">
+                                <input class="submit" type="submit" value="Submit">
+                        </div>
+                </div>
         </main>
         <footer>
-
+                <div class="footer-content">
+                        <div>
+                                <h3 class="footr-title">An Open Commitment by Sazzad Hossain Shimanto</h3>
+                        </div>
+                        <div>
+                                <a href="https://facebook.com/" target="_blank"><img src="./assets/facebook.png" alt=""></a>
+                                <a href="https://github.com/" target="_blank"><img src="./assets/github.png" alt=""></a>
+                                <a href="https://linkdin.com/sazzadhossainshimanto" target="_blank"><img src="./assets/linkedin-icon 1.png" alt=""></a>
+                        </div>
+                </div>
         </footer>
 </body>
 
